Added more functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,23 +25,13 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
 
-
-# Specify the DirectoryProvider to use (the Lucene Directory)
-#spring.jpa.properties.hibernate.search.default.directory_provider = filesystem
-
-# Using the filesystem DirectoryProvider you also have to specify the default
-# base directory for all indexes (make sure that the application have write
-# permissions on such directory)
-#spring.jpa.properties.hibernate.search.default.indexBase = /Users/cmaftei/lucene/indexes
-
-#spring.messages.basename=i18n/messages
+server.port = 8090
 
 
-
+#ldap.enabled = true
 #ldap.urls= # LDAP urls
 #ldap.base= # Base suffix from which all operations should originate.
 #ldap.username= # Login user of the LDAP.
 #ldap.password= # Login password of the LDAP.
 #ldap.base-environment.*= # LDAP custom environment properties.
-
 
