--- a/pom.xml
+++ b/pom.xml
@@ -74,11 +74,14 @@
 			<version>${jstl.version}</version>
 		</dependency>
 
+<!-- used for excel reports -->
 		<dependency>
 			<groupId>org.jxls</groupId>
 			<artifactId>jxls-poi</artifactId>
 			<version>1.0.14</version>
 		</dependency>
+		
+<!-- used for tests -->
 		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
@@ -90,34 +93,6 @@
 			<scope>test</scope>
 		</dependency>
    
-	
-<!-- 		<dependency>
-  <groupId>joda-time</groupId>
-  <artifactId>joda-time</artifactId>
-</dependency> -->
-		
-<!-- 		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-search-engine</artifactId>
-			<version>5.8.2.Final</version>
-		</dependency> -->
-<!-- 		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-search-orm</artifactId>
-			<version>5.8.2.Final</version>
-		</dependency> -->
-<!-- 		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-entitymanager</artifactId>
-		</dependency> -->
-<!-- 				<dependency>
-			<groupId>javax.validation</groupId>
-			<artifactId>validation-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-validator</artifactId>
-		</dependency> -->
 	</dependencies>
 
 	<build>
